minor frontend changes; implemented model fetch and load
